--- a/TheLastStand/Assembly-CSharp.csproj
+++ b/TheLastStand/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\MoveController.cs" />
      <Compile Include="Assets\Scripts\MovePlayer.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
